# consteig

./: .gitmodules  CMakeLists.txt  Makefile  consteig.hpp  constmat.hpp  readme.md
array/: array.hpp  array.test.cpp
dependencies/: CMakeLists.txt
dev_apps/: CMakeLists.txt  matrix_dev.cpp  solver_dev.cpp
eigen/: CMakeLists.txt  eigen.hpp
eigen/tests/: CMakeLists.txt  eigen.test.cpp
examples/: CMakeLists.txt  decomp.cpp  eigen.cpp  example_helper.hpp  matrix.cpp  solver.cpp
matrix/: CMakeLists.txt  decompositions.hpp  main.cpp  matrix.hpp  matrix.test.cpp  operations.hpp
matrix/decompositions/: decompositions_helper.hpp  hessenberg.hpp  householder.hpp  qr.hpp  qr.test.cpp
matrix/tests/: CMakeLists.txt  decompositions_helper.test.cpp  hessenberg.test.cpp  householder.test.cpp  matrix.test.cpp  operations.test.cpp  qr.test.cpp
solver/: CMakeLists.txt  main.cpp  qr_decomp.hpp  qr_decomp.test.cpp  solver.hpp  solver.test.cpp
tools/cmake/: get_gcem.cmake
tools/gtest/: test_tools.hpp
